<resources>
    <string name="app_name">Check mate</string>
    <string name="Category_spinner">카테고리</string>
    <string-array name="Category_Spinner">
        <item>카테고리를 선택해주세요.</item>
        <item>EXERCISE</item>
        <item>LIFESTYLE</item>
        <item>READING</item>
        <item>LEARNING</item>
        <item>HOBBIES</item>
        <item>ETC</item>
    </string-array>

    <string name="choose_category">카테고리를 선택해주세요.</string>

    <string name="default_notification_channel_id">Channel ID</string>
    <string name="default_notification_channel_name" translatable="true">Test</string>
    <string name="history_check_image">HistoryCheck</string>
    <string name="nickname">Nickname</string>
    <string name="loading">LOADING...</string>
    <string name="change_nickname">변경하기</string>
    <string name="app_version">앱 버전</string>
    <string name="support_email">teamcheckus@gmail.com</string>
    <string name="support">문의하기</string>
    <string name="app_version_value">0.0.1</string>
    <string name="logout">로그아웃</string>
    <string name="alarm_setting">알림 설정</string>
    <string name="alarm_page_title">알림</string>
    <string name="alarm_title">alarm_title</string>
    <string name="alarm_content">Alarm Content</string>
    <string name="alarm_date_time">date_time</string>
    <string name="info_according_to_method_info_1">-- 시작 시간, 인증 시간, 좋아요 개수만 수정 가능해요</string>
    <string name="info_according_to_method_info_2">-- 내 목표를 클릭하면 수정 버튼이 보일 거예요</string>
    <string name="info_create_goal">카테고리, 목표이름은 설정 후 변경할 수 없어요.</string>
    <string name="once_a_week">등록 후 일주일에 한 번 변경이 가능해요.</string>
    <string name="go_to_main_text">메인화면으로 이동하기</string>
    <string name="i_want_invite_text">초대할래요</string>
    <string name="the_end">끝 !</string>
    <string name="information_me_made">내가 만든 정보</string>
    <string name="title_name">title_name</string>
    <string name="period_text">인증 기간</string>
    <string name="period_start_information">2023.00.00</string>
    <string name="wave">~</string>
    <string name="period_end_information">202x.00.00 ~ 202x.00.00</string>
    <string name="check_days">인증 요일</string>
    <string name="day_value">hello</string>
    <string name="certification_method">인증 방식</string>
    <string name="method">method</string>
    <string name="appointment_time">인증 시간</string>
    <string name="certification_time_value">00:00</string>
    <string name="post_time">00:00:00</string>
    <string name="like_count_text">좋아요 개수</string>
    <string name="like_count_value">0</string>
    <string name="goal_edit_text">목표 수정</string>
    <string name="goal_name_text">목표 이름</string>
    <string name="create_goal_title">목표 생성</string>
    <string name="what_is_goal_name">목표의 이름을 입력해 주세요.</string>
    <string name="set_your_date_range">목표의 기간을 선택해 주세요.</string>
    <string name="set_period_text">목표 기간</string>
    <string name="image_warning">이미지 없음</string>
    <string name="start_text">시작</string>
    <string name="end_text">종료</string>
    <string name="certification_time_text">인증 시간</string>
    <string name="no_certification_time">인증시간 없음</string>
    <string name="method_instant">즉시 인증</string>
    <string name="method_confirm">확인 후 인증</string>
    <string name="like_num">좋아요 개수</string>
    <string name="minimum_like_num">(확인 후 인증 시) 최소 값</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>
    <string name="check_my_goal_page_title">목표 확인</string>
    <string name="modify_complete">수정 완료</string>
    <string name="sent">전송 완료</string>
    <string name="Hello">친구들과 함께 목표를 정하고 달성해요</string>
    <string name="display_theme">화면 테마</string>
    <string name="do_goal">목표 인증하기</string>
    <string name="there_is_no_method_info">method에 대한 정보가 없습니다.</string>
    <string name="goal_period_information">2021년 1월 1일부터 n일째</string>
    <string name="invite">초대하기</string>
    <string name="invite_complete">"초대 요청을 보냈어요! \n응답이 오면 알려드릴게요"</string>
    <string name="today_goals_guide">오늘 인증 할 목표</string>
    <string name="ongoing_goals_guide">진행중인 목표</string>
    <string name="wanna_new_goal_guide">나만의 새 목표를 만들어 볼까요?</string>
    <string name="service_terms">서비스 이용약관</string>
    <string name="privacy_policy">개인정보 처리방침</string>
    <string name="open_source_license">오픈소스 라이센스</string>
    <string name="service_quit">회원 탈퇴</string>
    <string name="body">Body</string>
    <string name="go_to_goal_detail">목표 상세로 이동</string>
    <string name="history_guide_text">클릭하면 내가 수행한 목표들을 보러 갈 수 있어요.</string>
    <string name="edit_nickname_warning">* 닉네임 변경 시 30일간 변경할 수 없어요.</string>
    <string name="new_nickname">New Nickname</string>
    <string name="dup_check">중복확인</string>
    <string name="before_nickname">Before Nickname</string>
    <string name="nickname_length_guide">2~8자리 이내의 닉네임만 사용 가능해요</string>
    <string name="nickname_special_guide">특수 문자는 사용할 수 없어요</string>
    <string name="nickname_duplication">이 닉네임은 다른 사용자가 사용 중이에요.</string>
    <string name="nickname_ok">좋은 닉네임이네요!</string>
    <string name="start">시작하기</string>
    <string name="nickname_guide">닉네임 변경 시 30일 이후에 다시 변경 가능해요.</string>
    <string name="next">다음</string>
    <string name="btn_edit_nickname">변경하기</string>
    <string name="create_my_goal">목표 생성하기</string>
    <string name="create_my_new_goal">새 목표 만들기</string>
    <string name="good_job">어떤 목표든 꾸준히 이루었다면 대단한 일!</string>
    <string name="upload_image">이미지 업로드</string>
    <string name="post_my_goal_guide">오늘 하루를 공유해주세요!</string>
    <string name="register">등록</string>
    <string name="date_info_ex">20210101 토요일</string>
    <string name="set_nickname">닉네임 설정</string>
    <string name="hello_checker">Hello\nChecker</string>
    <string name="with_friend">친구들과 함께 목표를 정하고\n함께 달성해보세요!</string>
    <string name="image_upload">이미지 업로드</string>
    <string name="text_certification_hint">오늘의 한일을 공유해볼까요?</string>
    <string name="invite_my_friend">친구 초대하기</string>
    <string name="invite_my_team">팀원 초대</string>
    <string name="lets_find_my_team">이제 함께 할\n친구를 찾아볼까요?</string>
    <string name="enter_nickname">닉네임을 입력해주세요</string>
    <string name="put_nickname">닉네임을 입력해주세요</string>
    <string name="nickname_hint">닉네임 (2~8자리 이내 한글 혹은 영문)</string>
    <string name="invite_teammate_button">초대하기</string>
    <string name="history_title">History title</string>
    <string name="history_teammate">함께한 팀원들</string>
    <string name="progress_percent">%.1f%%</string>

    <string name="invite_request">초대를 받을까요?</string>
    <string name="invite_msg">~님이 ~ 목표로 초대했습니다!</string>
    <string name="accept">수락</string>
    <string name="deny">거절</string>
    <string name="teamcrew">TEAMCREW</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="like_count">0 Like</string>
    <string name="O">O</string>
    <string name="day_date">토 \n 19일</string>
    <string name="to_history_guide">완료한 목표는 History에서 확인할 수 있어요</string>
    <string name="login_kakao">login_kakao</string>
    <string name="login_btn_naver">login_btn_naver</string>
    <string name="btn_x_close">btn_x_close</string>
    <string name="invite_btn">invite_btn</string>
    <string name="greeting">사용자 님\n오늘도 파이팅하세요!</string>
    <string name="error_dialog_body">에러 예시 문구입니다.</string>
    <string name="error_dialog_title">문제가 발생했어요.</string>
    <string name="ok">확인</string>
    <string name="login_to_sns">login_to_sns</string>
    <string name="percent_notification">목표 달성까지</string>
    <string name="text_percent">0%</string>
    <string name="team_mate_status">함께 하는 친구 상태</string>
    <string name="eclipse">eclipse</string>
    <string name="btn_do_my_goal">btn_do_my_goal</string>
    <string name="_0000_00_0">0000년 00월 0주차</string>
    <string name="btn_do_goal">btn_do_goal</string>
    <string name="item_date_example">19</string>
    <string name="item_day_of_the_week_example">토</string>
    <string name="reply_btn_accept">수락</string>
    <string name="reply_btn_reject">거절</string>
    <string name="invitation_reply_title">초대를 받을까요?</string>
    <string name="invitation_reply_content">예시 문구입니다.</string>
    <string name="invitation_reply_emoji">invitation_reply_emoji</string>
    <string name="login_with_sns">login_with_sns</string>
    <string name="google_login_button">google_login_button</string>
    <string name="post_input_hint">오늘은 무엇을 하셨나요?</string>
    <string name="like_count_info">53명이 좋아요를 눌렀어요</string>
    <string name="read_more">더보기</string>
    <string name="my_page">마이페이지</string>
    <string name="personal_info">개인 정보</string>
    <string name="edit_nickname">닉네임 변경</string>
    <string name="theme">화면 테마</string>
    <string name="app_info">앱 정보</string>
    <string name="my_page_checkmate_contact_value">teamcheckus@gmail.com</string>
    <string name="my_page_question">문의하기</string>
    <string name="my_page_app_version">앱 버전</string>
    <string name="my_page_app_version_value">0.0.1</string>
    <string name="my_page_term">서비스 이용약관</string>
    <string name="my_page_privacy_policy">개인정보 처리방</string>
    <string name="my_page_license">오픈소스 라이센스</string>
    <string name="my_page_delete_account">탈퇴하기</string>
    <string name="achievement_text">목표 달성률</string>
    <string name="history_empty">아직 성공한 목표가 없어요.</string>
    <string name="history">히스토리</string>
    <string name="appointment_time_info">알림받을 시간을 설정해주세요</string>

</resources>