<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_marginTop="?attr/actionBarSize"
              android:layout_marginBottom="?attr/actionBarSize"
              android:orientation="vertical"
              tools:context=".fragment.SettingPageFragment">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:elevation="5dp">

        <TextView
            android:id="@+id/Nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/main_font"
            android:text="@string/nickname"
            android:textSize="25sp" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:background="@color/white"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/edit_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sub_font"
                android:text="@string/change_nickname"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/Screen_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/sub_font"
                android:text="@string/display_theme"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/Logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sub_font"
                android:text="@string/logout"
                android:textSize="18sp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>



    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/almost_white" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/white"
        android:elevation="5dp">

        <RelativeLayout
                android:id="@+id/setting_support_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/Support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/main_font"
                android:text="@string/support"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/Support_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_toEndOf="@+id/Support"
                android:fontFamily="@font/main_font"
                android:text="@string/support_email"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/App_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Support"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/main_font"
                android:text="@string/app_version"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/App_version_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Support_email"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/App_version"
                android:fontFamily="@font/main_font"
                android:text="@string/app_version_value"
                android:textSize="15sp" />

            <TextView
                    android:id="@+id/Service_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/App_version_info"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/main_font"
                    android:text="@string/service_terms"
                    android:textSize="15sp"/>

            <TextView
                    android:id="@+id/Privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Service_terms"
                    android:layout_marginTop="10dp"
                    android:autoLink="web"
                    android:fontFamily="@font/main_font"
                    android:text="@string/privacy_policy"
                    android:textSize="15sp"/>

            <TextView
                android:id="@+id/Open_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Privacy_policy"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/main_font"
                android:text="@string/open_source_license"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/Withdraw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Open_source"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/main_font"
                android:text="@string/service_quit" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>