<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".fragment.GoalCreateCompleteFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/complete_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/main_font"
            android:text="@string/title_name"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/complete_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/main_font"
            android:text="@string/body"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            android:text="@string/good_job" />

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/to_main_page"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_round_green"
        android:fontFamily="@font/sub_font"
        android:text="@string/go_to_main_text" />

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textSize="11sp"
              android:layout_marginTop="15dp"
              android:layout_gravity="center_horizontal"
              android:text="@string/to_history_guide"/>

</LinearLayout>