<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="?attr/actionBarSize"
    tools:context=".fragment.CreateNewGoalFinalPage">

    <TextView
        android:id="@+id/make_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_goal_title"
        style="@style/main_name"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/make_goal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:background="@color/main_line"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/step_two"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"/>

    <TextView
        android:id="@+id/proof_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginStart="20dp"
        style="@style/create_goal_page_font"
        android:text="@string/proof_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/proof_time"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <TextView
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="알림받을 시간을 설정해주세요"
            android:layout_gravity="center|start"
            />


        <ImageButton
            android:id="@+id/clock_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/clear"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/image_warning"
            android:src="@drawable/clock_time"
            />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_gravity="bottom"
            android:background="@drawable/btn_main"
            />

    </FrameLayout>

    <TextView
        android:id="@+id/goal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/check_days"
        style="@style/create_goal_page_font"
        app:layout_constraintLeft_toLeftOf="@id/proof_time"
        app:layout_constraintTop_toBottomOf="@+id/proof_time" />



    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        app:layout_constraintRight_toRightOf="@id/frame1"
        app:layout_constraintTop_toBottomOf="@id/goal_name"
        app:layout_constraintLeft_toLeftOf="@id/frame1"
        >


        <TableLayout
            android:id="@+id/weekdays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2,3,4,5,6"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pick_day">

            <TableRow tools:ignore="UselessParent">
                <CheckBox
                    android:id="@+id/monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    style="@style/WeekdaysCheckBox"
                    android:text="@string/monday" />

                <CheckBox
                    android:id="@+id/tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/WeekdaysCheckBox"
                    android:text="@string/tuesday" />

                <CheckBox
                    android:id="@+id/wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/WeekdaysCheckBox"
                    android:text="@string/wednesday" />

                <CheckBox
                    android:id="@+id/thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/WeekdaysCheckBox"
                    android:text="@string/thursday" />


                <CheckBox
                    android:id="@+id/friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/WeekdaysCheckBox"
                    android:text="@string/friday" />

                <CheckBox
                    android:id="@+id/saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/WeekdaysCheckBox"
                    android:text="@string/saturday" />

                <CheckBox
                    android:id="@+id/sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/WeekdaysCheckBox"
                    android:text="@string/sunday" />
            </TableRow>
        </TableLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/set_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        style="@style/create_goal_page_font"
        android:text="@string/certification_method"
        app:layout_constraintLeft_toLeftOf="@id/goal_name"
        app:layout_constraintTop_toBottomOf="@id/goal_name" />


    <CheckBox
        android:id="@+id/instant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/set_date_text"
        app:layout_constraintLeft_toLeftOf="@id/frame1"
        android:text="@string/method_instant"
        style="@style/WeekdaysCheckBox"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/set_date_text"
        app:layout_constraintLeft_toLeftOf="@id/instant"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/WeekdaysCheckBox"
        android:text="@string/method_confirm"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_main_disabled"
        android:layout_marginBottom="46dp"
        android:text="@string/check_my_goal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        style="@style/main_btn_text"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/alert_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/alert_error"
        android:layout_marginStart="59.5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/save_btn"
        app:layout_constraintLeft_toLeftOf="@+id/save_btn"
        />

    <TextView
        android:id="@+id/start_checkmate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:includeFontPadding="false"
        android:text="@string/once_a_week"
        style="@style/alert_information"
        app:layout_constraintLeft_toRightOf="@+id/alert_icon"
        app:layout_constraintTop_toBottomOf="@+id/save_btn"
        />

</androidx.constraintlayout.widget.ConstraintLayout>